--- a/zotero.bib
+++ b/zotero.bib
@@ -393,3 +393,14 @@
 	urldate = {2017-07-02},
 	date = {2013}
 }
+
+@report{martin_det_1997,
+	title = {The {DET} Curve in Assessment of Detection Task Performance},
+	url = {http://www.dtic.mil/docs/citations/ADA530509},
+	abstract = {We introduce the {DET} Curve as a means of representing performance on detection tasks that involve a tradeoff of error types. We discuss why we prefer it to the traditional {ROC} Curve and offer several examples of its use in speaker recognition and language recognition. We explain why it is likely to produce approximately linear curves. We also note special points that may be included on these curves, how they are used with multiple targets, and possible further applications.},
+	institution = {National Institute of Standards and Technology},
+	author = {Martin, A. and Doddington, G. and Kamm, T. and Ordowski, M. and Przybocki, M.},
+	urldate = {2017-07-02},
+	date = {1997},
+	file = {Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/ARSHTHJ4/ADA530509.html:text/html}
+}
