--- a/zotero.bib
+++ b/zotero.bib
@@ -1,3 +1,4 @@
+
 @article{pevny_using_2016,
 	title = {Using Neural Network Formalism to Solve Multiple-Instance Problems},
 	url = {http://arxiv.org/abs/1609.07257},
@@ -402,4 +403,41 @@
 	urldate = {2017-07-02},
 	date = {1997},
 	file = {Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/ARSHTHJ4/ADA530509.html:text/html}
+}
+
+@software{lin_mlbase.jl:_2017,
+	title = {{MLBase}.jl: A set of functions to support the development of machine learning algorithms},
+	rights = {{MIT}},
+	url = {https://github.com/JuliaStats/MLBase.jl},
+	shorttitle = {{MLBase}.jl},
+	publisher = {Julia Statistics},
+	author = {Lin, Dahua},
+	urldate = {2017-07-03},
+	date = {2017-06-22},
+	note = {original-date: 2013-02-10T15:50:23Z},
+	file = {Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/D83EMEWP/MLBase.html:text/html}
+}
+
+@software{zea_roc.jl:_2015,
+	title = {{ROC}.jl: Receiver Operating Characteristic ({ROC}) Curve for Julia Language},
+	rights = {{MIT}},
+	url = {https://github.com/diegozea/ROC.jl},
+	shorttitle = {{ROC}.jl},
+	author = {Zea, Diego Javier},
+	urldate = {2017-07-03},
+	date = {2015-11-04},
+	note = {original-date: 2014-04-26T08:56:44Z},
+	file = {Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/XUWJDCDM/ROC.html:text/html}
+}
+
+@software{leeuwen_rocanalysis.jl:_2016,
+	title = {{ROCAnalysis}.jl: Receiver Operating Characteristics and functions for evaluation probabilistic binary classifiers},
+	rights = {{MIT}},
+	url = {https://github.com/davidavdav/ROCAnalysis.jl},
+	shorttitle = {{ROCAnalysis}.jl},
+	author = {Leeuwen, David van},
+	urldate = {2017-07-03},
+	date = {2016-12-08},
+	note = {original-date: 2014-03-13T08:23:30Z},
+	file = {Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/FH7UC6CW/ROCAnalysis.html:text/html}
 }
