Added all results to TeXt

--- a/acknowledgment.tex
+++ b/acknowledgment.tex
@@ -1,9 +1,6 @@
 \noindent \textit{\Large Poděkování:}
 
-\noindent Chtěl bych zde poděkovat především svému školiteli, doktoru Tomáši Pevnému,
-za pečlivost, ochotu, vstřícnost a odborné i lidské zázemí při vedení
-mé diplomové práce. Dále děkuji svému konzultantovi ................
-za ................ (???)
+\noindent Chtěl bych zde poděkovat především svému školiteli, doktoru Tomáši Pevnému, za ochotu, vstřícnost, odborné i lidské zázemí a zdravě kritický pohled při vedení mé diplomové práce.
 
 \vfill
 
