--- a/results.tex
+++ b/results.tex
@@ -1,9 +1,54 @@
 \chapter{Výsledky}
 
-Použité modely
+Použité modely.
 O tom, že všechny křivky jsou pro percentily.
 Hromada obrázků...
 
+\section{Srovnání s prior art}
+
 \section{Srovnání různých modelů}
 
-\section{Srovnání s prior art}
+\result{{by_settings/basic_PR}.pdf}{PR křivky modelů trénovaných pomocí trigramů s vahou 0.5}
+\result{{by_settings/unigrams_PR}.pdf}{PR křivky modelů trénovaných pomocí unigramů s vahou 0.5}
+\result{{by_settings/weight0.1_PR}.pdf}{PR křivky modelů trénovaných pomocí trigramů s vahou 0.1}
+\result{{by_settings/weight0.01_PR}.pdf}{PR křivky modelů trénovaných pomocí trigramů s vahou 0.01}
+
+\result{{by_settings/basic_ROC_log}.pdf}{ROC křivky modelů trénovaných pomocí trigramů s vahou 0.5}
+\result{{by_settings/unigrams_ROC_log}.pdf}{ROC křivky modelů trénovaných pomocí unigramů s vahou 0.5}
+\result{{by_settings/weight0.1_ROC_log}.pdf}{ROC křivky modelů trénovaných pomocí trigramů s vahou 0.1}
+\result{{by_settings/weight0.01_ROC_log}.pdf}{ROC křivky modelů trénovaných pomocí trigramů s vahou 0.01}
+
+\result{{by_settings/basic_F1}.pdf}{Křivky F-skóre modelů trénovaných pomocí trigramů s vahou 0.5}
+\result{{by_settings/unigrams_F1}.pdf}{Křivky F-skóre modelů trénovaných pomocí unigramů s vahou 0.5}
+\result{{by_settings/weight0.1_F1}.pdf}{Křivky F-skóre modelů trénovaných pomocí trigramů s vahou 0.1}
+\result{{by_settings/weight0.01_F1}.pdf}{Křivky F-skóre modelů trénovaných pomocí trigramů s vahou 0.01}
+
+\result{{by_settings/basic_DET}.pdf}{DET křivky modelů trénovaných pomocí trigramů s vahou 0.5}
+\result{{by_settings/unigrams_DET}.pdf}{DET křivky modelů trénovaných pomocí unigramů s vahou 0.5}
+\result{{by_settings/weight0.1_DET}.pdf}{DET křivky modelů trénovaných pomocí trigramů s vahou 0.1}
+\result{{by_settings/weight0.01_DET}.pdf}{DET křivky modelů trénovaných pomocí trigramů s vahou 0.01}
+
+
+\result{{by_model/relumean_PR}.pdf}{PR křivka modelu relumean pro různá nastavení}
+\result{{by_model/relurelumean_PR}.pdf}{PR křivka modelu relurelumean pro různá nastavení}
+\result{{by_model/relurelumeanrelu_PR}.pdf}{PR křivka modelu relurelumeanrelu pro různá nastavení}
+\result{{by_model/maxout3mean_PR}.pdf}{PR křivka modelu maxout3mean pro různá nastavení}
+\result{{by_model/maxout3maxout3mean_PR}.pdf}{PR křivka modelu maxout3maxout3mean pro různá nastavení}
+
+\result{{by_model/relumean_ROC_log}.pdf}{ROC křivka modelu relumean pro různá nastavení}
+\result{{by_model/relurelumean_ROC_log}.pdf}{ROC křivka modelu relurelumean pro různá nastavení}
+\result{{by_model/relurelumeanrelu_ROC_log}.pdf}{ROC křivka modelu relurelumeanrelu pro různá nastavení}
+\result{{by_model/maxout3mean_ROC_log}.pdf}{ROC křivka modelu maxout3mean pro různá nastavení}
+\result{{by_model/maxout3maxout3mean_ROC_log}.pdf}{ROC křivka modelu maxout3maxout3mean pro různá nastavení}
+
+\result{{by_model/relumean_F1}.pdf}{Křivka F-skóre modelu relumean pro různá nastavení}
+\result{{by_model/relurelumean_F1}.pdf}{Křivka F-skóre modelu relurelumean pro různá nastavení}
+\result{{by_model/relurelumeanrelu_F1}.pdf}{Křivka F-skóre modelu relurelumeanrelu pro různá nastavení}
+\result{{by_model/maxout3mean_F1}.pdf}{Křivka F-skóre modelu maxout3mean pro různá nastavení}
+\result{{by_model/maxout3maxout3mean_F1}.pdf}{Křivka F-skóre modelu maxout3maxout3mean pro různá nastavení}
+
+\result{{by_model/relumean_DET}.pdf}{DET křivka modelu relumean pro různá nastavení}
+\result{{by_model/relurelumean_DET}.pdf}{DET křivka modelu relurelumean pro různá nastavení}
+\result{{by_model/relurelumeanrelu_DET}.pdf}{DET křivka modelu relurelumeanrelu pro různá nastavení}
+\result{{by_model/maxout3mean_DET}.pdf}{DET křivka modelu maxout3mean pro různá nastavení}
+\result{{by_model/maxout3maxout3mean_DET}.pdf}{DET křivka modelu maxout3maxout3mean pro různá nastavení}
