--- a/BP.tex
+++ b/BP.tex
@@ -7,7 +7,7 @@
 
 %\input{titlepage.tex}
 
-\cleardoublepage
+\clearpage
 
 %\null\vfill
 %\begin{center}
@@ -15,23 +15,15 @@
 %\end{center}
 %\vfill
 
-%\newpage
-
-%\null\vfill
-%\begin{center}
-	%- Zadání práce (zadní strana) -
-%\end{center}
-%\vfill
-
-\cleardoublepage
+\clearpage
 
 %\input{acknowledgment.tex}
 
-\cleardoublepage
+\clearpage
 
 %\input{abstract.tex}
 
-\cleardoublepage
+\clearpage
 
 \pagestyle{plain}
 
