--- a/zotero.bib
+++ b/zotero.bib
@@ -312,16 +312,6 @@
 	date = {1998}
 }
 
-@inproceedings{andrews_support_2003,
-	title = {Support vector machines for multiple-instance learning},
-	url = {http://papers.nips.cc/paper/2232-support-vector-machines-for-multiple-instance-learning.pdf},
-	pages = {577--584},
-	booktitle = {Advances in neural information processing systems},
-	author = {Andrews, Stuart and Tsochantaridis, Ioannis and Hofmann, Thomas},
-	urldate = {2017-07-01},
-	date = {2003}
-}
-
 @inproceedings{wang_solving_2000,
 	title = {Solving Multiple-Instance Problem: A Lazy Learning Approach},
 	url = {http://cogprints.org/2124/},
@@ -440,4 +430,84 @@
 	date = {2016-12-08},
 	note = {original-date: 2014-03-13T08:23:30Z},
 	file = {Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/FH7UC6CW/ROCAnalysis.html:text/html}
+}
+
+@book{goodfellow_deep_2016,
+	location = {Cambridge, Massachusetts},
+	title = {Deep Learning},
+	isbn = {978-0-262-03561-3},
+	abstract = {"Written by three experts in the field,  Deep Learning is the only comprehensive book on the subject." -- Elon Musk, cochair of {OpenAI}; cofounder and {CEO} of Tesla and {SpaceXDeep} learning is a form of machine learning that enables computers to learn from experience and understand the world in terms of a hierarchy of concepts. Because the computer gathers knowledge from experience, there is no need for a human computer operator to formally specify all the knowledge that the computer needs. The hierarchy of concepts allows the computer to learn complicated concepts by building them out of simpler ones; a graph of these hierarchies would be many layers deep. This book introduces a broad range of topics in deep learning. The text offers mathematical and conceptual background, covering relevant concepts in linear algebra, probability theory and information theory, numerical computation, and machine learning. It describes deep learning techniques used by practitioners in industry, including deep feedforward networks, regularization, optimization algorithms, convolutional networks, sequence modeling, and practical methodology; and it surveys such applications as natural language processing, speech recognition, computer vision, online recommendation systems, bioinformatics, and videogames. Finally, the book offers research perspectives, covering such theoretical topics as linear factor models, autoencoders, representation learning, structured probabilistic models, Monte Carlo methods, the partition function, approximate inference, and deep generative models.  Deep Learning can be used by undergraduate or graduate students planning careers in either industry or research, and by software engineers who want to begin using deep learning in their products or platforms. A website offers supplementary material for both readers and instructors.},
+	pagetotal = {800},
+	publisher = {The {MIT} Press},
+	author = {Goodfellow, Ian and Bengio, Yoshua and Courville, Aaron},
+	date = {2016-11-18}
+}
+
+@inproceedings{andrews_support_2003,
+	title = {Support vector machines for multiple-instance learning},
+	url = {http://papers.nips.cc/paper/2232-support-vector-machines-for-multiple-instance-learning.pdf},
+	pages = {577--584},
+	booktitle = {Advances in neural information processing systems},
+	author = {Andrews, Stuart and Tsochantaridis, Ioannis and Hofmann, Thomas},
+	urldate = {2017-07-04},
+	date = {2003}
+}
+
+@inproceedings{zhang_multiple_2006,
+	title = {Multiple instance boosting for object detection},
+	url = {http://papers.nips.cc/paper/2926-multiple-instance-boosting-for-object-detection.pdf},
+	pages = {1417--1424},
+	booktitle = {Advances in neural information processing systems},
+	author = {Zhang, Cha and Platt, John C. and Viola, Paul A.},
+	urldate = {2017-07-04},
+	date = {2006}
+}
+
+@inproceedings{gartner_multi-instance_2002,
+	title = {Multi-instance kernels},
+	volume = {2},
+	url = {http://sci2s.ugr.es/keel/pdf/algorithm/congreso/2002-Gartner-ICML.pdf},
+	pages = {179--186},
+	booktitle = {{ICML}},
+	author = {Gärtner, Thomas and Flach, Peter A. and Kowalczyk, Adam and Smola, Alexander J.},
+	urldate = {2017-07-04},
+	date = {2002}
+}
+
+@inproceedings{kwok_marginalized_2007,
+	title = {Marginalized Multi-Instance Kernels.},
+	volume = {7},
+	url = {http://www.aaai.org/Papers/IJCAI/2007/IJCAI07-145.pdf},
+	pages = {901--906},
+	booktitle = {{IJCAI}},
+	author = {Kwok, James T. and Cheung, Pak-Ming},
+	urldate = {2017-07-04},
+	date = {2007}
+}
+
+@report{haussler_convolution_1999,
+	title = {Convolution kernels on discrete structures},
+	url = {https://www.soe.ucsc.edu/sites/default/files/technical-reports/UCSC-CRL-99-10.pdf},
+	institution = {Technical report, Department of Computer Science, University of California at Santa Cruz},
+	author = {Haussler, David},
+	urldate = {2017-07-04},
+	date = {1999}
+}
+
+@article{cheplygina_multiple_2015,
+	title = {Multiple instance learning with bag dissimilarities},
+	volume = {48},
+	issn = {0031-3203},
+	url = {http://www.sciencedirect.com/science/article/pii/S0031320314002817},
+	doi = {10.1016/j.patcog.2014.07.022},
+	abstract = {Multiple instance learning ({MIL}) is concerned with learning from sets (bags) of objects (instances), where the individual instance labels are ambiguous. In this setting, supervised learning cannot be applied directly. Often, specialized {MIL} methods learn by making additional assumptions about the relationship of the bag labels and instance labels. Such assumptions may fit a particular dataset, but do not generalize to the whole range of {MIL} problems. Other {MIL} methods shift the focus of assumptions from the labels to the overall (dis)similarity of bags, and therefore learn from bags directly. We propose to represent each bag by a vector of its dissimilarities to other bags in the training set, and treat these dissimilarities as a feature representation. We show several alternatives to define a dissimilarity between bags and discuss which definitions are more suitable for particular {MIL} problems. The experimental results show that the proposed approach is computationally inexpensive, yet very competitive with state-of-the-art algorithms on a wide range of {MIL} datasets.},
+	pages = {264--275},
+	number = {1},
+	journaltitle = {Pattern Recognition},
+	shortjournal = {Pattern Recognition},
+	author = {Cheplygina, Veronika and Tax, David M. J. and Loog, Marco},
+	urldate = {2017-07-04},
+	date = {2015-01-01},
+	keywords = {Dissimilarity representation, drug activity prediction, Image classification, Multiple instance learning, Point set distance, Text categorization},
+	file = {ScienceDirect Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/C5PFMKXR/S0031320314002817.html:text/html}
 }
