--- a/zotero.bib
+++ b/zotero.bib
@@ -511,3 +511,55 @@
 	keywords = {Dissimilarity representation, drug activity prediction, Image classification, Multiple instance learning, Point set distance, Text categorization},
 	file = {ScienceDirect Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/C5PFMKXR/S0031320314002817.html:text/html}
 }
+
+@article{cauchy_methode_1847,
+	title = {Méthode générale pour la résolution des systemes d’équations simultanées},
+	volume = {25},
+	url = {https://www.cs.xu.edu/math/Sources/Cauchy/Orbits/1847%20CR%20536(383).pdf},
+	pages = {536--538},
+	number = {1847},
+	journaltitle = {Comp. Rend. Sci. Paris},
+	author = {Cauchy, Augustin},
+	urldate = {2017-07-04},
+	date = {1847}
+}
+
+@article{duchi_adaptive_2011,
+	title = {Adaptive Subgradient Methods for Online Learning and Stochastic Optimization},
+	volume = {12},
+	issn = {{ISSN} 1533-7928},
+	url = {http://www.jmlr.org/papers/v12/duchi11a.html},
+	pages = {2121--2159},
+	issue = {Jul},
+	journaltitle = {Journal of Machine Learning Research},
+	author = {Duchi, John and Hazan, Elad and Singer, Yoram},
+	urldate = {2017-07-04},
+	date = {2011},
+	file = {Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/DEGN23VC/duchi11a.html:text/html}
+}
+
+@article{zeiler_adadelta:_2012,
+	title = {{ADADELTA}: An Adaptive Learning Rate Method},
+	url = {http://arxiv.org/abs/1212.5701},
+	shorttitle = {{ADADELTA}},
+	abstract = {We present a novel per-dimension learning rate method for gradient descent called {ADADELTA}. The method dynamically adapts over time using only first order information and has minimal computational overhead beyond vanilla stochastic gradient descent. The method requires no manual tuning of a learning rate and appears robust to noisy gradient information, different model architecture choices, various data modalities and selection of hyperparameters. We show promising results compared to other methods on the {MNIST} digit classification task using a single machine and on a large scale voice dataset in a distributed cluster environment.},
+	journaltitle = {{arXiv}:1212.5701 [cs]},
+	author = {Zeiler, Matthew D.},
+	urldate = {2017-07-04},
+	date = {2012-12-22},
+	eprinttype = {arxiv},
+	eprint = {1212.5701},
+	keywords = {Computer Science - Learning},
+	file = {arXiv.org Snapshot:/home/cisco/.mozilla/firefox/wqy8gqj5.default/zotero/storage/QH46GTXC/1212.html:text/html}
+}
+
+@article{tieleman_lecture_2012,
+	title = {Lecture 6.5-rmsprop: Divide the gradient by a running average of its recent magnitude},
+	volume = {4},
+	shorttitle = {Lecture 6.5-rmsprop},
+	pages = {26--31},
+	number = {2},
+	journaltitle = {{COURSERA}: Neural networks for machine learning},
+	author = {Tieleman, Tijmen and Hinton, Geoffrey},
+	date = {2012}
+}
